/*************************************************************************
	> FileName: proto.h
	> Author  : Li Chao
 ************************************************************************/

#ifndef _PROTO_H
#define _PROTO_H
#define REG_REQ 401
#define REG_RSP 402
#define LOGIN_REQ 101
#define LOGIN_RSP 102
#define LOGOUT_REQ 103
#define LOGOUT_RSP 104
#define ADD_FRIEND_REQ 201
#define ADD_FRIEND_RSP 202
#define DEL_FRIEND_REQ 203
#define DEL_FRIEND_RSP 204
#define GET_PHOTO_REQ 301
#define GET_PHOTO_RSP 302
#define GET_MESSAGE_LIST_REQ 303
#define GET_MESSAGE_LIST_RSP 304
#define PUBLISH_MESSAGE_REQ 305
#define PUBLISH_MESSAGE_RSP 306

#define SERVER_RESTART 601
#define SERVER_SHUTDOWN 602
#endif
